@@ -9,22 +9,22 @@
 <body>
     
 <p>Natamicina</p>
-<input type="button" name="muestra" id="muestra" value="Solicitar muestra" onclick=muestraSolicitada(1)>
+<input type="button" name="muestra" class="btnMuestras" id="btnNata" value="Solicitar muestra">
 
 <p>Beta Caroteno</p>
-<input type="button" name="muestra" id="muestra" value="Solicitar muestra" onclick=muestraSolicitada(2)>
+<input type="button" name="muestra" class="btnMuestras" id="btnBetaC" value="Solicitar muestra">
 
 <p>Sucralosa</p>
-<input type="button" name="muestra" id="muestra" value="Solicitar muestra" onclick=muestraSolicitada(3)>
+<input type="button" name="muestra" class="btnMuestras" id="btnSucra" value="Solicitar muestra">
 
 <p>Acesulfame K</p>
-<input type="button" name="muestra" id="muestra" value="Solicitar muestra" onclick=muestraSolicitada(4)>
+<input type="button" name="muestra" class="btnMuestras" id="btnAceK" value="Solicitar muestra">
 
 <p>Dioxido de titanio</p>
-<input type="button" name="muestra" id="muestra" value="Solicitar muestra" onclick=muestraSolicitada(5)>
+<input type="button" name="muestra" class="btnMuestras" id="btnO2Ti" value="Solicitar muestra">
 
 <p>Ácido cítrico</p>
-<input type="button" name="muestra" id="muestra" value="Solicitar muestra" onclick=muestraSolicitada(6)>
+<input type="button" name="muestra" class="btnMuestras" id="btnACitri" value="Solicitar muestra">
 
 <h2 style="margin-top: 20px;">Muestras Solicitadas</h2>
 <table >
